--- a/Training_Sys.Web/Views/_ViewImports.cshtml
+++ b/Training_Sys.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Training_Sys.Web
-@using Training_Sys.Web.Models
+@using Training_Sys.Web.ViewModels
+@using Training_Sys.Web.ViewModels.Course
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
