#UserController Edit,add,delete,index

--- a/Training_Sys.Web/Views/Course/_CoursesTable.cshtml
+++ b/Training_Sys.Web/Views/Course/_CoursesTable.cshtml
@@ -19,7 +19,7 @@
                 <td>@item.InsName</td>
                 <td>@item.InsID</td>
                 <td class="text-center">
-                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning me-1">
+                    <a asp-action="UpdateCourse" asp-route-id="@item.Id" class="btn btn-sm btn-warning me-1">
                         <i class="bi bi-pencil-square"></i> Edit
                     </a>
                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info text-white me-1">
