--- a/Training_Sys.Web/Views/_ViewImports.cshtml
+++ b/Training_Sys.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Training_Sys.Web
 @using Training_Sys.Web.ViewModels
 @using Training_Sys.Web.ViewModels.Course
+@using Training_Sys.Web.ViewModels.User
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
