--- a/Training_Sys.Web/Views/Course/UpdateCourse.cshtml
+++ b/Training_Sys.Web/Views/Course/UpdateCourse.cshtml
@@ -52,7 +52,7 @@
                                 <i class="fas fa-arrow-left me-2"></i>Back to List
                             </a>
                             <button type="submit" class="btn btn-primary">
-                                <i class="fas fa-plus-circle me-2"></i>Create Course
+                                <i class="fas fa-plus-circle me-2"></i>Update Course
                             </button>
                         </div>
                     </form>
