--- a/Training_Sys.Web/Views/Shared/_Layout.cshtml
+++ b/Training_Sys.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Course" asp-action="Index">Courses</a>
                         </li>
-                    </ul>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
+                        </li>
+                    </ul>Training_Sys.Web.ViewModels.User
                 </div>
             </div>
         </nav>
