--- a/Training_Sys.Web/Views/User/UpdateUser.cshtml
+++ b/Training_Sys.Web/Views/User/UpdateUser.cshtml
@@ -1,7 +1,7 @@
-﻿@model AddUserVm
+﻿@model UpdateUserVM
 
 @{
-    ViewData["Title"] = "Add New User";
+    ViewData["Title"] = "Update User";
 }
 
 <div class="container py-5">
@@ -9,7 +9,7 @@
         <div class="col-lg-8">
             <div class="card shadow-lg">
                 <div class="card-header bg-primary text-white">
-                    <h3 class="mb-0">Add New User</h3>
+                    <h3 class="mb-0">Update User</h3>
                 </div>
                 <div class="card-body">
                     <form asp-action="AddUser" class="needs-validation" novalidate>
@@ -53,8 +53,8 @@
                             <a asp-action="Index" class="btn btn-outline-secondary me-md-2">
                                 <i class="fas fa-arrow-left me-2"></i>Back to List
                             </a>
-                            <button type="submit" class="btn btn-primary">
-                                <i class="fas fa-user-plus me-2"></i>Create User
+                            <button type="submit" class="btn btn-primary">userVM
+                                <i class="fas fa-user-plus me-2"></i>Update User
                             </button>
                         </div>
                     </form>
