--- a/Training_Sys.Web/Views/Shared/_Layout.cshtml
+++ b/Training_Sys.Web/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Session" asp-action="Index">Session</a>
+                        </li>
                     </ul>Training_Sys.Web.ViewModels.User
                 </div>
             </div>
