--- a/Training_Sys.Web/Views/_ViewImports.cshtml
+++ b/Training_Sys.Web/Views/_ViewImports.cshtml
@@ -2,5 +2,5 @@
 @using Training_Sys.Web.ViewModels
 @using Training_Sys.Web.ViewModels.Course
 @using Training_Sys.Web.ViewModels.User
-
+@using Training_Sys.Web.ViewModels.Session
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
