--- a/Training_Sys.Web/Views/_ViewImports.cshtml
+++ b/Training_Sys.Web/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using Training_Sys.Web.ViewModels.Course
 @using Training_Sys.Web.ViewModels.User
 @using Training_Sys.Web.ViewModels.Session
+@using Training_Sys.Web.ViewModels.Grade
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
