--- a/Training_Sys.Web/wwwroot/css/site.css
+++ b/Training_Sys.Web/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-html {
+﻿html {
   font-size: 14px;
 }
 
@@ -11,12 +11,32 @@ html {
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
+.custom-nav {
+    background-color: #212529; 
+}
 
 html {
   position: relative;
   min-height: 100%;
 }
+html, body {
+    height: 100%; 
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
 
 body {
-  margin-bottom: 60px;
+    flex: 1;
+}
+
+main {
+    flex: 1;
+}
+
+footer {
+    background-color: #212529;
+    color: white;
+    text-align: center;
+    padding: 15px 0;
 }
